--- a/style.css
+++ b/style.css
@@ -140,8 +140,7 @@ footer{
 
     footer{
         text-align: center;
-        margin-top: 2.5em;
-        margin-left: 0;
+        margin-top: 2.5em 0;
     }
     
     .footer-logos{
