--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ footer{
 
     footer{
         text-align: center;
-        margin-top: 2.5em 0;
+        margin: 2.5em 0;
     }
     
     .footer-logos{
